<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
   >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/staffColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <ImageView
                   android:id="@+id/logout_Btn"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:layout_marginTop="20dp"
                   android:src="@drawable/logoutbtn"
                   android:layout_alignParentEnd="true"
                   android:layout_marginEnd="30dp"/>
           </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:fontFamily="@font/scopeoneregular"
                android:layout_marginTop="80dp"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/name_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:fontFamily="@font/calibribold"
                android:text="@string/staff_name"
                android:textColor="@color/white"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/inComingEvent_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/scopeoneregular"
                android:text="@string/upcoming_eventss"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>









</LinearLayout>