<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/logoBG_RL"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/logobg_cardView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="70dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logobg" />

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-25dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="220dp"
                android:src="@drawable/logoprecy" />
        </RelativeLayout>

        <EditText
            android:id="@id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="screen"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:fontFamily="@font/catamaranbold"
            android:hint="@string/email"
            android:paddingBottom="20dp"
            android:singleLine="true" />

    <EditText
        android:id="@id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="screen"
        android:drawableStart="@drawable/ic_baseline_key_24"
        android:drawablePadding="20dp"
        android:fontFamily="@font/catamaranbold"
        android:hint="@string/password"
        android:paddingBottom="20dp"
        android:singleLine="true" />


        <CheckBox
            android:id="@+id/showPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/black"
            android:fontFamily="@font/catamaranregular"
            android:text="@string/show_password" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/showPW"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInEmail_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@color/black"
                android:fontFamily="@font/catamaranbold"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/sign_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/black"
                />
        </RelativeLayout>
    </FrameLayout>

    </RelativeLayout>



</RelativeLayout>